# gst-bs2b

./: AUTHORS  Makefile.am  NEWS  README  autogen-clean.sh  autogen.sh  configure.ac  test.py
debian/: changelog  control  copyright  rules
src/: Makefile.am  gstbs2b.c
